# python-scrapy-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
crawler/: scrapyd.conf
crawler/crawler/: middlewares.py
