[tool.poetry]
name = "python-scrapy-template"
version = "0.1.0"
description = ""
authors = ["prd-tan-truong <tan.truong@paradox.ai>"]

[tool.poetry.dependencies]
python = "^3.10.4"
Scrapy = "^2.6.2"
scrapyd = "^1.3.0"
scrapyd-client = "^1.2.2"
sentry-sdk = "^1.9.5"

[tool.poetry.dev-dependencies]
paradox-pydevdeps = {git = "https://github.com/ParadoxAi/paradox-pydevdeps.git", rev = "f64716c5b8e37233e3cf69645513572fb2a65f7d"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
